# kindle-to-markdown

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  kindle-to-markdown  pyproject.toml
.github/workflows/: main.yml
kindle_to_markdown/: __init__.py  __main__.py  languages.py
tests/: test_code.py
tests/res/: not-supported-lang.html  template-book-de.html  template-book-en.html  template-book-es.html  template-book-fr.html  template-book-it.html  template-book-not-supported-lang.html
