[build-system]
requires = ["uv_build>=0.7.2,<0.8"]
build-backend = "uv_build"

[project]
name = "kindle_to_markdown"
version = "0.1.0"
description = "A simple program to convert Kindle HTML annotations to a Markdown file."
license = "Apache-2.0"
authors = [{ name = "Basti Tee", email = "basti.tee@icloud.com" }]
maintainers = [{ name = "Basti Tee", email = "basti.tee@icloud.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.14"
keywords = ["kindle", "markdown", "converter", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["click>=8.1.7", "beautifulsoup4>=4.12.3"]

[project.urls]
Homepage = "https://github.com/BastiTee/kindle-to-markdown"
Repository = "https://github.com/BastiTee/kindle-to-markdown"

[project.scripts]
kindle_to_markdown = "kindle_to_markdown.__main__:main"

[tool.uv.build-backend]
module-root = ""

[dependency-groups]
dev = ["mypy>=1", "pytest>=9", "ruff>=0.8", "typing-extensions>=4"]

[tool.mypy]
disallow_untyped_defs = true
check_untyped_defs = true
follow_imports = "normal"
ignore_missing_imports = true
warn_unused_ignores = true
warn_unreachable = true

[tool.pytest]
addopts = ["-p", "no:warnings"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "BLE", "A", "S"]
ignore = ["E203", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "E501"]

[tool.ruff.format]
quote-style = "preserve"
